--- a/src/app/Modules/auth/login/login.component.scss
+++ b/src/app/Modules/auth/login/login.component.scss
@@ -38,6 +38,8 @@
     border-radius: 1.25rem;
     background: #33CC57;
     text-align: center;
+    transition: width 0.5s ease, height 0.5s ease;
+
 
     @media (min-width: 500px) {
 
@@ -73,6 +75,8 @@
 
     }
 }
+
+
 
 .form {
     display: grid;
@@ -121,7 +125,7 @@
 
     .form-control-1 {
         display: block;
-        width: calc(95% - 2 * 0.75rem - 2 * 1px);
+        width: calc(90% - 2 * 0.75rem - 2 * 1px);
         padding: 0.375rem 0.75rem;
         font-size: 1rem;
         line-height: 1.5;
@@ -177,30 +181,9 @@
         width: 100%;
     }
 
-    /* ... (otros estilos) ... */
-
-    @media (max-width: 767px) {
-        .article-info {
-            display: none;
-        }
-    }
-
 }
 
-.large-circle-container {
-    position: relative;
-}
-
-.large-circle {
-    position: fixed;
-    width: 449px;
-    height: 456px;
-    background-color: #7d504600;
-    border-radius: 49%;
-    transform: translateX(-50%);
-    border: 1px solid #33CC57;
-}
-
+.large-circle,
 .large-circle-1 {
     position: fixed;
     width: 449px;
@@ -209,15 +192,68 @@
     border-radius: 49%;
     transform: translateX(-50%);
     border: 1px solid #33CC57;
+    transition: right 0.5s ease, left 0.5s ease;
+
 }
 
 .large-circle,
 .large-circle-1 {
     bottom: -287px;
-    right: 60%;
+    right: 71%;
 }
 
 
 .large-circle-1 {
-    right: 64%;
+    right: 74%;
+}
+@media (min-width: 300px) and (max-width: 680px) {
+
+    .input-group {
+        width: 100% ;
+    }
+
+    .form-control-1 {
+        width: calc(84% - 1.5rem - 2px)!important ;
+    }
+
+    .article-info {
+        display: none ;
+    }
+
+    .large-circle,
+    .large-circle-1 {
+        bottom: -358px ;
+        right: 24% ;
+    }
+
+
+    .large-circle-1 {
+        right: 28% ;
+    }
+}
+
+@media (min-width: 680px) and (max-width: 1900px) {
+
+    .input-group {
+        width: 61% ;
+    }
+
+    .form-control-1 {
+        width: calc(82% - 1.5rem - 2px) !important;
+    }
+
+    .article-info {
+        display: grid ;
+    }
+    .large-circle,
+    .large-circle-1 {
+        bottom: -358px ;
+        right: 64% ;
+    }
+
+
+    .large-circle-1 {
+        right: 68% !important;
+    }
+
 }
