--- a/src/app/Shared/components/body/body.component.html
+++ b/src/app/Shared/components/body/body.component.html
@@ -1,1 +1,12 @@
-<p>body works!</p>
+<body>
+    <header>
+        <app-navbar></app-navbar>
+    </header>
+    <main>
+        <!-- Contenido-->
+        <router-outlet></router-outlet>
+    </main>
+    <footer>
+        <app-footer></app-footer>
+    </footer>
+</body>
