--- a/src/app/Shared/components/footer/footer.component.html
+++ b/src/app/Shared/components/footer/footer.component.html
@@ -1,1 +1,44 @@
-<p>footer works!</p>
+<div class="footer-content">
+    <div class="footer-img">
+        <img src="../../../../assets/AMBIEFAC_LOGO.png" alt="">
+    </div>
+    <div class="footer-colum">
+        <div class="footer-row title">
+            <span>Contactanos</span>
+        </div>
+        <div class="footer-row">
+            <ul>
+                <li class="footer-colum-item">Telefono:3#######</li>
+                <li class="footer-colum-item">Correo:ejemplo@ejemplo.com</li>
+                <li class="footer-colum-item">Formulario:</li>
+            </ul>
+        </div>
+    </div>
+    <div class="footer-colum">
+        <div class="footer-row title">
+            <span>Sobre Nosotros</span>
+        </div>
+        <div class="footer-row">
+            <ul>
+                <li class="footer-colum-item">Mision y vision</li>
+                <li class="footer-colum-item">Equipo de expertos en medio ambiente</li>
+                <li class="footer-colum-item">Historia y compromiso con la educacion ambiental</li>
+            </ul>
+        </div>
+    </div>
+    <div class="footer-colum">
+        <div class="footer-row title">
+            <span>Siguenos en Redes Sociales</span>
+        </div>
+        <div class="footer-row">
+            <ul>
+                <li class="footer-colum-item">Facebook</li>
+                <li class="footer-colum-item">Twitter</li>
+                <li class="footer-colum-item">Instagram</li>
+            </ul>
+        </div>
+    </div>
+</div>
+<div class="derechos">
+    <span>© 2023 AMBIEFAC. Todos los derechos reservados.</span>
+</div>
