--- a/src/app/Modules/auth/login/login.component.html
+++ b/src/app/Modules/auth/login/login.component.html
@@ -25,6 +25,7 @@
             <span>
                 Has olvidado tu contraseña?
             </span>
+             <span> <p>¿No tiene una cuenta? <a routerLink="/login/Register">Regístrese</a></span>
         </form>
     </article>
     <article>
