--- a/src/app/Modules/pages/temas-inscripcion/temas-inscripcion.component.html
+++ b/src/app/Modules/pages/temas-inscripcion/temas-inscripcion.component.html
@@ -1,1 +1,70 @@
-<p>temas-inscripcion works!</p>
+<div class="header-topic">
+    <div class="header-topic-row">
+        <div class="header-topic-colum tile-topic">
+            <p>Ambiente</p>
+            <h1>Recicla y Recicla y Transforma</h1>
+            <p>Por AMBIEFAC Academy</p>
+        </div>
+        <div class="header-topic-colum image-topic">
+            <img src="../../../../assets/galeria-de-imagenes.png" alt="">
+        </div>
+    </div>
+</div>
+
+<div class="information-topic">
+    <div class="information-topic-row">
+        <div class="information-topic-colum descroption">
+            <div class="information-topic-row description-topic">
+                <h2>Descripción General:</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi aspernatur quo ipsam ut nulla
+                    necessitatibus sit
+                    quasi ullam dolorem. Sit ipsa, beatae obcaecati velit voluptas dignissimos ut nesciunt vero
+                    voluptatibus.</p>
+            </div>
+            <div class="information-topic-row study-plan-topic">
+                <h2>¿Que aprenderás?</h2>
+                <ul>
+                    <li>Técnicas de Reciclaje Efectivas: Descubrirás cómo clasificar, recolectar y reciclar diversos
+                        tipos de materiales de manera adecuada y eficiente.</li>
+                    <li>Participación en Proyectos Comunitarios: Te involucrarás en proyectos prácticos que marcan la
+                        diferencia en tu comunidad, desde limpiezas locales hasta iniciativas de reforestación.</li>
+                    <li>Habilidades para Reducir tu Huella Ecológica: Adquirirás habilidades prácticas para reducir el
+                        desperdicio y adoptar un estilo de vida más sostenible.</li>
+                    <li>onciencia Ambiental: Desarrollarás una profunda comprensión de los desafíos ambientales actuales
+                        y aprenderás cómo tu participación puede hacer una diferencia real.</li>
+                </ul>
+            </div>
+            <div class="information-topic-row join-up-topic">
+                <span>Únete a nosotros y sé parte del cambio hacia un futuro más verde. ¡Inscríbete ahora y haz la
+                    diferencia!</span>
+            </div>
+            <div class="information-topic-row button-incription-topic">
+                <button class="button-inscription" (click)="navegarAInformacion()">¡Inscríbete ahora!</button>
+            </div>
+        </div>
+        <div class="information-topic-colum duration">
+            <div class="duration-topic-row">
+                <div class="length">
+                    <img src="../../../../assets/hora.png" alt="">
+                    <p>6hr</p>
+                </div>
+            </div>
+            <div class="duration-topic-row">
+                <div class="level">
+                    <div class="length">
+                        <img src="../../../../assets/siguiente-nivel (1).png" alt="">
+                        <p>Intermedio</p>
+                    </div>
+                </div>
+            </div>
+            <div class="duration-topic-row">
+                <div class="idioma">
+                    <div class="length">
+                        <img src="../../../../assets/traduccion.png" alt="">
+                        <p>Español</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
