--- a/src/app/Shared/components/navbar/navbar.component.html
+++ b/src/app/Shared/components/navbar/navbar.component.html
@@ -1,16 +1,31 @@
 <nav class="nav_bar">
     <div class="logo"></div>
     <ul class="nav-list_" [class.show]="showMenu">
-      <li><a href="#">Cursos</a></li>
-      <li><a href="#">Mas</a></li>
-      <li><a href="#">Apoyo</a></li>
+      <li><a routerLink="/AMBIEFAC/cursos">Cursos</a></li>
+      <!-- <li><a href="#">Mas</a></li>
+      <li><a href="#">Apoyo</a></li> -->
       <li><a href="#">Sobre nosotros</a></li>
+      <li class="dropdown" (click)="toggleDropdown()">
+        <a>Login</a>
+        <div class="dropdown-content"  *ngIf="showDropdown">
+            <ul>
+              <li>Iniciar sesion</li>
+              <li>Resgistrarme</li>
+            </ul>
+
+        </div>
+    </li>
     </ul>
     <div class="search-bar">
         <input type="text" placeholder="Buscar...">
         <div class="button-search"></div>
     </div>
-    <div class="login-button"><a type="button">Iniciar sesion</a></div>
+    <div class="login-button">
+      <a>Iniciar sesion</a>
+      <div class="dropdown-content">
+        <a href="#">Registrarme</a>
+    </div>
+    </div>
     <div class="burger-menu" (click)="toggleMenu()">&#9776;</div>
   </nav>
   
