--- a/src/app/Shared/components/navbar/navbar.component.scss
+++ b/src/app/Shared/components/navbar/navbar.component.scss
@@ -13,8 +13,40 @@ $font-family-poppins: 'Poppins', sans-serif;
     -webkit-box-shadow: 0px 7px 23px -4px rgba(0, 0, 0, 0.39);
     -moz-box-shadow: 0px 7px 23px -4px rgba(0, 0, 0, 0.39);
 
+
     .login-button {
+        display: block;
         margin: auto;
+        position: relative;
+        cursor: pointer;
+    
+        a {
+            display: block;
+            padding: 10px;
+            text-decoration: none;
+            color: #333;
+        }
+    
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #f9f9f9;
+            min-width: 160px;
+            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+            z-index: 1;
+            top: 100%;
+    
+            a {
+                padding: 12px 16px;
+                text-decoration: none;
+                display: block;
+                color: #333;
+            }
+        }
+    
+        &:hover .dropdown-content {
+            display: block;
+        }
     }
 
     .logo {
@@ -31,6 +63,9 @@ $font-family-poppins: 'Poppins', sans-serif;
         display: flex;  
         margin: 0;
         padding: 0;
+        .dropdown{
+            display: none;
+        }
 
         li {
             margin: 0 40px;
@@ -87,7 +122,10 @@ $font-family-poppins: 'Poppins', sans-serif;
             top: 65px;
             left: 0;
             width: 100%;
-            background-color: #333;
+            background-color: #e6e2e2;
+            .dropdown{
+                display: block;
+            }
 
             &.show {
                 display: flex;
@@ -105,6 +143,7 @@ $font-family-poppins: 'Poppins', sans-serif;
 
         .login-button {
             margin: auto;
+            display: none;
         }
 
         .search-bar {
