--- a/src/app/feature/components/navbar/navbar.component.scss
+++ b/src/app/feature/components/navbar/navbar.component.scss
@@ -56,6 +56,7 @@ $font-family-poppins: 'Poppins', sans-serif;
         margin: 0 50px;
         height: 90px; 
         width: 150px;
+        cursor: pointer;
     }
 
     .nav-list_ {
@@ -68,6 +69,7 @@ $font-family-poppins: 'Poppins', sans-serif;
         }
 
         li {
+            cursor: pointer;
             margin: 0 40px;
 
             a {
