--- a/src/app/feature/admin/cursos/components/agregar-cruso/agregar-cruso.component.html
+++ b/src/app/feature/admin/cursos/components/agregar-cruso/agregar-cruso.component.html
@@ -1,24 +1,42 @@
 <app-card-body [Titulo]='titulo' [linkBack]="'admin/consultar-curso'" [ButtonRigth]="AddCurso" [isSave]="true"
   [tooltip]="'Agregar'" [tooltipBack]="'Volver'">
-  <form class="w-full flex flex-col items-center">
+  <form [formGroup]="miFormulario" class="w-full flex flex-col items-center">
     <div class="m-2 w-[50%]">
       <label for="nombre-curso" class="block mb-2 text-sm font-medium text-gray-900">Nombre del curso</label>
-      <input type="text" id="nombre-curso"
+      <input type="text" id="nombreCurso" formControlName="nombreCurso"
         class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
         placeholder="Ejemplo: Gestión Sostenible de Residuos" required>
+        <div  *ngIf="miFormulario.get('nombreCurso')?.invalid && miFormulario.get('nombreCurso')?.touched">
+        <span  class="text-red-500 text-sm mt-1">Por favor, introduce el nombre del curso.</span>
+        </div>
+    </div>
+    <div class="m-2 w-[50%]">
+      <label for="imagen" class="block mb-2 text-sm font-medium text-gray-900">Imagen</label>
+      <input type="text" id="imagen" placeholder="https://ejemplo.com/imagen.jpg" formControlName="imagen"
+        class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+        required>
+        <div  *ngIf="miFormulario.get('imagen')?.invalid && miFormulario.get('imagen')?.touched">
+          <span  class="text-red-500 text-sm mt-1">Por favor, proporciona una URL válida para la imagen.</span>
+          </div>
     </div>
     <div class="m-2 w-[50%]">
       <label for="tiempo" class="block mb-2 text-sm font-medium text-gray-900">Tiempo</label>
-      <input type="text" id="tiempo" placeholder="Ejemplo: 30 hr"
+      <input type="text" id="tiempo" placeholder="Ejemplo: 30 hr" formControlName="tiempo"
         class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
         required>
+        <div  *ngIf="miFormulario.get('tiempo')?.invalid && miFormulario.get('tiempo')?.touched">
+          <span  class="text-red-500 text-sm mt-1">Por favor, especifica el tiempo del curso.</span>
+          </div>
     </div>
     <div class="m-2 w-[50%]">
-      <label for="Descripcion" class="block mb-2 text-sm font-medium text-gray-900">Descripcion</label>
-      <textarea id="Descripcion"
+      <label for="descripcion" class="block mb-2 text-sm font-medium text-gray-900">Descripcion</label>
+      <textarea id="descripcion" formControlName="descripcion"
         placeholder="Ejemplo: Aprende las mejores prácticas para la gestión sostenible de residuos....... "
         class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
         required></textarea>
+        <div  *ngIf="miFormulario.get('descripcion')?.invalid && miFormulario.get('descripcion')?.touched">
+          <span  class="text-red-500 text-sm mt-1">Por favor, agrega una descripción para el curso.</span>
+          </div>
     </div>
     <div class="m-2 w-[50%] h-[50px]"  *ngIf="OnSave">
       <div (click)="addContent()" class="border flex fle-col justify-center rounded-[6px] cursor-pointer">
