--- a/src/app/feature/admin/cursos/components/consultar-cursos/consultar-cursos.component.html
+++ b/src/app/feature/admin/cursos/components/consultar-cursos/consultar-cursos.component.html
@@ -9,7 +9,7 @@
             <th class="pb-3 text-end min-w-[100px]">DESCRIPCION</th>
             <th class="pb-3 text-end min-w-[100px]">TIEMPO</th>
             <th class="pb-3 pr-12 text-end min-w-[175px]">CONTENIDO</th>
-            <th class="pb-3 text-end min-w-[50px]">DETAILS</th>
+            <th class="pb-3 text-end min-w-[50px]">DETALLE</th>
           </tr>
         </thead>
         <tbody>
