--- a/src/app/Shared/components/card-body/card-body.component.html
+++ b/src/app/Shared/components/card-body/card-body.component.html
@@ -1,5 +1,5 @@
-<body class="p-[25px]" >
-    <div class="flex w-full  h-[15%] ">
+<body class="px-[25px]" >
+    <div class="flex w-full pt-4 h-[15%] ">
         <div class="bg-green-500 text-white p-4 rounded-lg shadow-lg w-full ">
             <div class="actions  py-[5px] items-center  w-full  mb-2 flex flex-row justify-between">
                 <i class="mr-[20px] fa-solid fa-chevron-left text-[40px] cursor-pointer" placement="bottom" [ngbTooltip]="tooltipBack"  (click)="navigateToBack()"></i>
@@ -15,7 +15,7 @@
 
     <div class="flex w-full  h-auto my-[3%] ">
         <div class="bg-with-500 text-white p-4 rounded-lg shadow-lg w-full">
-            <div class="w-full mb-2">
+            <div class="w-full mb-2 h-full">
                 <ng-content></ng-content>
             </div> 
         </div>
