--- a/src/app/feature/components/layout-cliente/layout-cliente.component.html
+++ b/src/app/feature/components/layout-cliente/layout-cliente.component.html
@@ -1,1 +1,16 @@
-<p>layout-cliente works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ambiefac school</title>
+</head>
+<body>
+  <nav class="w-full h-[90px] p-0">
+    <app-navbar-client class="w-full h-full"></app-navbar-client>
+  </nav>
+    <section class="w-full">
+      <ng-content ></ng-content>
+    </section>
+</body>
+</html>
