--- a/src/app/feature/components/navbar-client/navbar-client.component.html
+++ b/src/app/feature/components/navbar-client/navbar-client.component.html
@@ -1,1 +1,18 @@
-<p>navbar-client works!</p>
+<section class="w-full flex justify-around items-center border shadow-md bg-green-500 text-white">
+  <div class="w-[10%] flex justify-center items-center">
+    <img src="assets/AMBIEFAC_LOGO.png" alt="logo" width="90">
+  </div>
+  <div  class="w-[75%] h-[50px] flex border-r-2 justify-end items-center">
+    <div class="mr-4  w-[85px] h-full flex justify-center items-center
+     hover:text-[#c8c9c8] "
+     [class.my-learning]="isMyLearningRoute">
+      <button  class="w-full">Mis cursos</button>
+    </div>
+  </div>
+  <div class="w-[15%] flex h-[70px] justify-center items-center">
+    <button class="flex items-center gap-3 ">
+      <img class="mb-1" src="assets/usuario.png" alt="" width="45">
+      <label class="text-[1.1rem]" for="">Esteban Alfonso</label>
+    </button>
+  </div>
+</section>
